<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_deails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtDateAndTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:maxLines="2"
        android:paddingStart="10dp"
        android:text=""
        android:textColor="#485260"
        android:textSize="17sp"
        android:textStyle="bold"

        android:visibility="visible" />

    <TextView
        android:id="@+id/tvborder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/inset_widget_divider"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/innerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="14dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="75dp"
            android:minHeight="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/checkbox_off"

                android:visibility="gone"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"

                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1"
                android:text=""
                android:textColor="#485260"
                android:textSize="12sp" />

            <View
                android:id="@+id/sideBar"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"

                android:layout_marginEnd="9dp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="vertical"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/h_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/icon_down"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:minHeight="26dp"
                    android:singleLine="true"
                    android:text=""
                    android:fontFamily="@font/latosemibold"
                    android:layout_marginStart="2dp"
                    android:textColor="#485260"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/icon_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:gravity="center"
                    android:minWidth="24dp"
                    android:minHeight="24dp"
                    android:src="@mipmap/ic_more_vert_black_24dp"
                    android:textColor="@color/color_7a799a"
                    android:textSize="18sp"
                    android:importantForAccessibility="no" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/timer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:layout_marginStart="2dp"

                android:layout_marginBottom="5dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/icon_dot"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/meeting_dot"
                    android:visibility="gone"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/time_tostart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latoregular"
                    android:text=""
                    android:textColor="@color/color_626281"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:maxLines="1"
                android:textColor="#485260"
                android:textSize="13sp"
                app:drawableStartCompat="@drawable/vector_location_icon" />


            <TextView
                android:id="@+id/tv_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:singleLine="true"
                android:textColor="#485260"
                android:textSize="13sp"
                app:drawableStartCompat="@drawable/vector_person" />

            <TextView
                android:id="@+id/tv_meeting_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@drawable/meeting_notes_border"
                android:drawablePadding="7dp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:paddingLeft="7dp"
                android:paddingTop="2dp"
                android:paddingEnd="@dimen/dimen_14dp"
                android:paddingBottom="2dp"
                android:singleLine="true"
                android:text="@string/meeting_notes"
                android:textColor="#485260"
                android:textSize="13sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_meeting_notes" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">


                <LinearLayout
                    android:id="@+id/dial_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/show_more_background"
                    android:gravity="center"
                    android:minHeight="32dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/icon_dial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/latobold"
                        android:text="@string/icon_e91d"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:letterSpacing="0.1"
                        android:text="@string/dial_in"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/join_layout"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"

                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/show_more_background"
                    android:gravity="center"
                    android:minHeight="32dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/icon_join"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/latobold"
                        android:text="@string/icon_e954"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:letterSpacing="0.1"
                        android:text="@string/join"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"

                    android:id="@+id/notes_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/show_more_background"
                    android:gravity="center"
                    android:minHeight="32dp"
                    android:paddingStart="10dp"

                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/icon_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/latobold"
                        android:text="@string/icon_e92a"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:letterSpacing="0.1"
                        android:text="@string/notes"
                        android:textColor="@color/splash_background_color"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>


    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/inset_widget_divider" />
</LinearLayout>
